updated notebook and readme

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -112,36 +112,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# worst offenders\n",
     "missing_pct.sort_values(ascending=False).head(15)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Takeaways\n",
+    "## Preprocessing Demo\n",
+    "Showing the cleaning, scaling, and split that happens in the training pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop features with >50% missing\n",
+    "threshold = 50\n",
+    "cols_to_drop = missing_pct[missing_pct > threshold].index.tolist()\n",
+    "df_clean = df.drop(columns=['Time'] + cols_to_drop)\n",
+    "print(f\"Dropped {len(cols_to_drop)} columns with >{threshold}% missing\")\n",
+    "print(f\"Remaining features: {df_clean.shape[1] - 1}\")  # minus the label column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# impute remaining missing values with median\n",
+    "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "- ~14:1 class imbalance, will need weighted loss or oversampling\n",
-    "- A bunch of features are >50% missing, safe to drop those\n",
-    "- Remaining missing values can be imputed with median\n",
-    "- All features are numeric which makes preprocessing straightforward"
+    "X = df_clean.drop(columns=['Pass/Fail']).values\n",
+    "y = df_clean['Pass/Fail'].values\n",
+    "\n",
+    "# convert labels from -1/1 to 0/1\n",
+    "y = np.where(y == -1, 0, y)\n",
+    "\n",
+    "imputer = SimpleImputer(strategy='median')\n",
+    "X = imputer.fit_transform(X)\n",
+    "print(f\"Missing values after imputation: {np.isnan(X).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# impute remaining missing values with median\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "X = df_clean.drop(columns=['Pass/Fail']).values\n",
+    "y = df_clean['Pass/Fail'].values\n",
+    "\n",
+    "# convert labels from -1/1 to 0/1\n",
+    "y = np.where(y == -1, 0, y)\n",
+    "\n",
+    "imputer = SimpleImputer(strategy='median')\n",
+    "X = imputer.fit_transform(X)\n",
+    "print(f\"Missing values after imputation: {np.isnan(X).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# standardize features\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "print(f\"Before scaling - mean: {X.mean():.2f}, std: {X.std():.2f}\")\n",
+    "print(f\"After scaling  - mean: {X_scaled.mean():.4f}, std: {X_scaled.std():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stratified train/test split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X_scaled, y, test_size=0.2, stratify=y, random_state=42\n",
+    ")\n",
+    "\n",
+    "print(f\"Train set: {X_train.shape[0]} samples, defect rate: {y_train.mean():.3f}\")\n",
+    "print(f\"Test set:  {X_test.shape[0]} samples, defect rate: {y_test.mean():.3f}\")\n",
+    "print(f\"\\nBoth ~{y.mean():.3f} - stratification preserved the ratio\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   }
  },
